fix(tup-230): tweak single checkbox field grid gap

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.forms.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.forms.css
@@ -48,7 +48,7 @@ p.help-text:last-child {
 .field-wrapper.checkboxinput {
   display: inline-grid;
 
-  column-gap: 0.5em;
+  column-gap: 0.25em;
   align-items: baseline;
   grid-template-columns: min-content auto; /* shrink input, let label extend */
   grid-template-areas:
